<resources>
    <string name="app_name">ST8K</string>
    <string name="start_button_name">Start</string>
    <string name="stop_button_name">Stop</string>
    <string name="repeat_switch">Repeat</string>
    <string name="humanize_switch">Humanize</string>
    <string name="skip_command_switch">Skip Command</string>
    <string name="interval_text">Interval</string>
    <string name="seconds_unit_text">second(s)</string>
</resources>
